axios kütüphanesi dependinces'e eklendi, hooklar kullanıldı, sayfada başlık,görsel ve açıklama gözüküyor, birkaç css eklendi

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.App h2 {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 40px;
+}
+
+.App p {
+  font-family: "Courier New", Courier, monospace;
+  padding: 20px;
+  font-weight: bold;
+}
