--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,62 @@
+* {
+  box-sizing: border-box;
+  /*border: 1px solid tomato;*/
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  color: white;
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   min-height: 100vh;
+  background-color: black;
+  padding: 2rem;
+}
+
+.loading {
+  font-size: 2rem;
+  color: wheat;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.column {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.mainText {
+  z-index: 2;
+  position: absolute;
+  max-width: 60%;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  line-height: 1.5;
+  padding: 1rem 2rem;
+  margin-top: 6rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mediaContainer img {
+  width: 100%;
+  height: auto;
 }
 
-.App h1 {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 40px;
+.mediaContainer {
+  border-radius: 2rem;
+  overflow: hidden;
 }
 
-.App p {
-  font-family: "Courier New", Courier, monospace;
-  padding: 20px;
-  font-weight: bold;
+.header {
+  padding-left: 2rem;
 }
